<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="14dp"
    android:paddingTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@color/blue2"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingStart="10dp"
    android:paddingEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_arrow_forward_24dp"
            android:layout_centerVertical="true"
            tools:ignore="ContentDescription"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:id="@+id/ivVocabulary"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/ic_vocabulary"
            android:contentDescription="@string/category_image" />

        <TextView
            android:id="@+id/tvVocabulary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/ivVocabulary"
            android:layout_marginStart="8dp"
            tools:text="@string/kosakata"
            android:textColor="@color/colorWhite"/>

        <ImageView
            android:id="@+id/ivMeaning"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_meaning"
            android:layout_below="@+id/ivVocabulary"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/category_image" />

        <TextView
            android:id="@+id/tvMeaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_below="@+id/tvVocabulary"
            android:layout_toEndOf="@+id/ivMeaning"
            android:layout_marginStart="17dp"
            tools:text="@string/deskripsi"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

</LinearLayout>